--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <p class="hide error" id="budget-error">
                         Value cannot be empty or negative
                     </p>
+                    <label for="total-amount" class="visually-hidden">Enter Total Amount</label>
                     <input type="number" id="total-amount" placeholder="Enter Total Amount">
                     <button class="submit" id="total-amount-button">
                         Set Budget
@@ -31,7 +32,9 @@
                     <p class="hide error" id="product-title-error">
                         Values cannot be empty
                     </p>
+                    <label for="product-title" class="visually-hidden">Enter Title Of Product</label>
                     <input type="text" class="product-title" id="product-title" placeholder="Enter Title Of Product">
+                    <label for="user-amount" class="visually-hidden">Enter Cost Of Product</label>
                     <input type="number" id="user-amount" placeholder="Enter Cost Of Product">
                     <button class="submit" id="check-amount">Check Amount</button>
                 </div>
